map1/gap_follower/log/build_2025-04-21_23-02-16/gap_follower_pkg/stderr.log
  File "/home/salem/Desktop/f1tenth-autonomous-racing/map1/gap_follower/install/gap_follower_pkg/lib/python3.8/site-packages/gap_follower_pkg/gap_follower.py", line 73
    speed = self.min_speed *  # FORCE EDGE STICKING TURN if needed
                              ^
SyntaxError: invalid syntax

